--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <a class="header-link">ToDo List</a>
+        <a class="header-link">ToDo</a>
         <a class="header-link" id="aside_open_but">Statistics</a>
     </header>
     <main>
